// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders input and matches snapshot 1`] = `
<div>
  <div
    class="input padded"
  >
    <input
      placeholder="Hello World"
    />
  </div>
</div>
`;

exports[`renders input with value and matches snapshot 1`] = `
<div>
  <div
    class="input padded"
  >
    <div
      class="placeholder"
    >
      Hello
    </div>
    <input
      placeholder="Hello"
      value="World"
    />
  </div>
</div>
`;
